# FinFlex

./: .breakpoints  Abstract.docx  README.md  database.py  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.upm/: store.json
templates/: assets_form.html  blog.html  debttracker.html  footer.html  home.html  index.html  login.html  modal.html  months.html  navbar.html  navbarstyle.html  personalfinance.html  sidebar.html  signup.html  transactions.html
