[tool.poetry]
name = "repl_nix_FinFlex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.15.0"
SQLAlchemy = "^2.0.18"
Flask = "^2.3.2"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
